--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,7 +5,11 @@
     <title>webapp</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <router-view></router-view>
+      <alertmsg></alertmsg>
+      <loading></loading>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
